Adiciona novas entidades (Cliente, Funcionario, Venda) e implementa compra

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,9 @@
                 "${workspaceFolder}\\buscaSequencialJogo.c",
                 "${workspaceFolder}\\buscaBinariaJogo.c",
                 "${workspaceFolder}\\mergeSortExternoJogo.c",
+                "${workspaceFolder}\\cliente.c", 
+                "${workspaceFolder}\\funcionario.c", 
+                "${workspaceFolder}\\venda.c", 
                 "-o",
                 "${workspaceFolder}\\output\\main.exe",
                 "-lm"
