--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,37 +2,43 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build All C Files (GCC)",
+            "label": "build lojaJogos2",
             "type": "shell",
-            "command": "C:\\MinGW\\bin\\gcc.EXE", // Garanta que este caminho está correto
+            "command": "gcc",
             "args": [
-                "-Wall",
-                "-Wextra",
-                "-g3",
-                // AQUI ESTÁ O PONTO CHAVE: LISTE TODOS OS SEUS ARQUIVOS .C!
-                "${workspaceFolder}\\main.c",
-                "${workspaceFolder}\\jogo.c",
-                "${workspaceFolder}\\buscaSequencialJogo.c",
-                "${workspaceFolder}\\buscaBinariaJogo.c",
-                "${workspaceFolder}\\mergeSortExternoJogo.c",
-                "${workspaceFolder}\\cliente.c", 
-                "${workspaceFolder}\\funcionario.c", 
-                "${workspaceFolder}\\venda.c", 
+                "-g",
+                // Arquivos da Parte I
+                "${fileDirname}\\main.c",
+                "${fileDirname}\\jogo.c",
+                "${fileDirname}\\cliente.c",
+                "${fileDirname}\\funcionario.c",
+                "${fileDirname}\\venda.c",
+                "${fileDirname}\\buscaSequencialJogo.c",
+                "${fileDirname}\\buscaBinariaJogo.c",
+                "${fileDirname}\\mergeSortExternoJogo.c",
+                // Novos arquivos da Parte II
+                "${fileDirname}\\SelecaoSubs.c",
+                "${fileDirname}\\arvoreVencedores.c",
+                "${fileDirname}\\testes.c",
+                // Saída
                 "-o",
-                "${workspaceFolder}\\output\\main.exe",
-                "-lm"
+                "${fileDirname}\\output\\main.exe"
             ],
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
+            },
             "problemMatcher": [
                 "$gcc"
-            ],
-            "presentation": {
-                "reveal": "always",
-                "panel": "new"
-            }
+            ]
         }
     ]
 }
